--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=e01fc51b3d2087dd7ca6",
+    "/css/app.css": "/css/app.css?id=a143a8cc3ad569a837aa"
 }
